TP-1148 fix overlapping ext icon by adding margin right to ext link

--- a/public/themes/custom/palvelumanuaali/components/01-atoms/links/link/_link.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/links/link/_link.scss
@@ -60,6 +60,7 @@ a {
 
 .ext-link {
   position:relative;
+  margin-right: $space;
   &::after {
     background-image: url("../../assets/images/icons/ext.svg");
     content: "";
